--- a/Class/Class5/app/src/main/AndroidManifest.xml
+++ b/Class/Class5/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ToastActivity"></activity>
         <activity android:name=".alertAcitivy">
+        </activity>
+        <activity android:name=".FragmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FragmentActivity"></activity>
     </application>
 
 </manifest>
