--- a/FragmentTask/app/src/main/AndroidManifest.xml
+++ b/FragmentTask/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mskir.class5">
+    package="com.example.mskir.fragmenttask">
 
     <application
         android:allowBackup="true"
@@ -9,18 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ToastActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".alertAcitivy">
-
-        </activity>
-        <activity android:name=".FragmentActivity">
-
         </activity>
     </application>
 
